// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Table Compact 1`] = `
<table
  aria-describedby="fd-mocked-short-id"
  className="fd-table fd-table--compact"
  onBlur={[Function]}
  role="grid"
>
  <caption
    aria-live="polite"
    className="fd-table__caption"
    id="fd-mocked-short-id"
  >
    
  </caption>
  <thead
    className="fd-table__header"
  >
    <tr
      className="fd-table__row"
    >
      <th
        className="fd-table__cell"
      >
        Column Header 1
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 2
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 3
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 4
      </th>
    </tr>
  </thead>
  <tbody
    className="fd-table__body"
  >
    <tr
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell"
      >
        Data 1
      </td>
      <td
        className="fd-table__cell"
      >
        Data 2
      </td>
      <td
        className="fd-table__cell"
      >
        Data 3
      </td>
      <td
        className="fd-table__cell"
      >
        Data 4
      </td>
    </tr>
    <tr
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell"
      >
        Data 5
      </td>
      <td
        className="fd-table__cell"
      >
        Data 6
      </td>
      <td
        className="fd-table__cell"
      >
        Data 7
      </td>
      <td
        className="fd-table__cell"
      >
        Data 8
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Component API/Table Condensed 1`] = `
<table
  aria-describedby="fd-mocked-short-id"
  className="fd-table fd-table--condensed"
  onBlur={[Function]}
  role="grid"
>
  <caption
    aria-live="polite"
    className="fd-table__caption"
    id="fd-mocked-short-id"
  >
    
  </caption>
  <thead
    className="fd-table__header"
  >
    <tr
      className="fd-table__row"
    >
      <th
        className="fd-table__cell"
      >
        Column Header 1
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 2
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 3
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 4
      </th>
    </tr>
  </thead>
  <tbody
    className="fd-table__body"
  >
    <tr
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell"
      >
        Data 1
      </td>
      <td
        className="fd-table__cell"
      >
        Data 2
      </td>
      <td
        className="fd-table__cell"
      >
        Data 3
      </td>
      <td
        className="fd-table__cell"
      >
        Data 4
      </td>
    </tr>
    <tr
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell"
      >
        Data 5
      </td>
      <td
        className="fd-table__cell"
      >
        Data 6
      </td>
      <td
        className="fd-table__cell"
      >
        Data 7
      </td>
      <td
        className="fd-table__cell"
      >
        Data 8
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Component API/Table Grid Table 1`] = `
<table
  aria-describedby="fd-mocked-short-id"
  className="fd-table"
  onBlur={[Function]}
  role="grid"
>
  <caption
    aria-live="polite"
    className="fd-table__caption"
    id="fd-mocked-short-id"
  >
    
  </caption>
  <thead
    className="fd-table__header"
  >
    <tr
      className="fd-table__row"
    >
      <th
        className="fd-table__cell fd-table__cell--checkbox fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select all rows"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Product Name
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Product ID
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Quantity
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Status
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Supplier
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Image
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Heavy Weight
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Categories
      </th>
      <th
        className="fd-table__cell fd-table__cell--focusable"
      >
        Delivery Date
      </th>
    </tr>
  </thead>
  <tbody
    className="fd-table__body"
  >
    <tr
      aria-selected={false}
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Notebook Basic 15"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span>
          Notebook Basic 15
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <input
          aria-label="Product ID"
          className="fd-input"
          defaultValue="HT-1000"
          name="Notebook Basic 15"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span>
          10
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span
          className="fd-object-status fd-object-status--positive"
        >
          <span
            className="fd-object-status__text"
          >
            Available
          </span>
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-popover"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="fd-popover__control"
                  >
                    <div
                      aria-controls="fd-mocked-short-id"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-label="Supplier"
                      className="fd-select"
                      onClick={[Function]}
                      onKeyPress={[Function]}
                      role="combobox"
                      tabIndex={0}
                    >
                      <div
                        className="fd-select__control"
                      >
                        <span
                          aria-label={null}
                          className="fd-select__text-content"
                        >
                          Very Best Screens
                        </span>
                        <span
                          className="fd-button fd-button--transparent fd-select__button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--slim-arrow-down"
                            role="img"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <a
          aria-label="Show image: Notebook Basic 15"
          className="fd-link"
          href="https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/images/HT-1000.jpg"
        >
          Show image
        </a>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Heavy Weight"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <input
          aria-label="Categories"
          className="fd-input"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          defaultValue="2017-03-26"
          onChange={[Function]}
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="fd-input-group--control fd-input-group"
                      >
                        <input
                          aria-label="Delivery Date"
                          className="fd-input fd-input-group__input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyPress={[Function]}
                          placeholder="MM/DD/YYYY"
                          type="text"
                          value=""
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Choose date"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--appointment-2"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Notebook Basic 17"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span>
          Notebook Basic 17
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <input
          aria-label="Product ID"
          className="fd-input"
          defaultValue="HT-1001"
          name="Notebook Basic 17"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span>
          0
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span
          className="fd-object-status fd-object-status--negative"
        >
          <span
            className="fd-object-status__text"
          >
            Unavailable
          </span>
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-popover"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="fd-popover__control"
                  >
                    <div
                      aria-controls="fd-mocked-short-id"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-label="Supplier"
                      className="fd-select"
                      onClick={[Function]}
                      onKeyPress={[Function]}
                      role="combobox"
                      tabIndex={0}
                    >
                      <div
                        className="fd-select__control"
                      >
                        <span
                          aria-label={null}
                          className="fd-select__text-content"
                        >
                          Fasttech
                        </span>
                        <span
                          className="fd-button fd-button--transparent fd-select__button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--slim-arrow-down"
                            role="img"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <a
          aria-label="Show image: Notebook Basic 17"
          className="fd-link"
          href="https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/images/HT-1001.jpg"
        >
          Show image
        </a>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Heavy Weight"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <input
          aria-label="Categories"
          className="fd-input"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          defaultValue="2017-04-17"
          onChange={[Function]}
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="fd-input-group--control fd-input-group"
                      >
                        <input
                          aria-label="Delivery Date"
                          className="fd-input fd-input-group__input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyPress={[Function]}
                          placeholder="MM/DD/YYYY"
                          type="text"
                          value=""
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Choose date"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--appointment-2"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Notebook Basic 18"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span>
          Notebook Basic 18
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <input
          aria-label="Product ID"
          className="fd-input"
          defaultValue="HT-1002"
          name="Notebook Basic 18"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span>
          13
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span
          className="fd-object-status fd-object-status--positive"
        >
          <span
            className="fd-object-status__text"
          >
            Available
          </span>
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-popover"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="fd-popover__control"
                  >
                    <div
                      aria-controls="fd-mocked-short-id"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-label="Supplier"
                      className="fd-select"
                      onClick={[Function]}
                      onKeyPress={[Function]}
                      role="combobox"
                      tabIndex={0}
                    >
                      <div
                        className="fd-select__control"
                      >
                        <span
                          aria-label={null}
                          className="fd-select__text-content"
                        >
                          Printers for All
                        </span>
                        <span
                          className="fd-button fd-button--transparent fd-select__button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--slim-arrow-down"
                            role="img"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <a
          aria-label="Show image: Notebook Basic 18"
          className="fd-link"
          href="https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/images/HT-1002.jpg"
        >
          Show image
        </a>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Heavy Weight"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <input
          aria-label="Categories"
          className="fd-input"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          defaultValue="2017-01-07"
          onChange={[Function]}
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="fd-input-group--control fd-input-group"
                      >
                        <input
                          aria-label="Delivery Date"
                          className="fd-input fd-input-group__input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyPress={[Function]}
                          placeholder="MM/DD/YYYY"
                          type="text"
                          value=""
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Choose date"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--appointment-2"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Notebook Basic 19"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span>
          Notebook Basic 19
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <input
          aria-label="Product ID"
          className="fd-input"
          defaultValue="HT-1003"
          name="Notebook Basic 19"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span>
          15
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <span
          className="fd-object-status fd-object-status--positive"
        >
          <span
            className="fd-object-status__text"
          >
            Available
          </span>
        </span>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-popover"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="fd-popover__control"
                  >
                    <div
                      aria-controls="fd-mocked-short-id"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-label="Supplier"
                      className="fd-select"
                      onClick={[Function]}
                      onKeyPress={[Function]}
                      role="combobox"
                      tabIndex={0}
                    >
                      <div
                        className="fd-select__control"
                      >
                        <span
                          aria-label={null}
                          className="fd-select__text-content"
                        >
                          Technocom
                        </span>
                        <span
                          className="fd-button fd-button--transparent fd-select__button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--slim-arrow-down"
                            role="img"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <a
          aria-label="Show image: Notebook Basic 19"
          className="fd-link"
          href="https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/images/HT-1003.jpg"
        >
          Show image
        </a>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Heavy Weight"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <input
          aria-label="Categories"
          className="fd-input"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell fd-table__cell--focusable"
      >
        <div
          defaultValue="2017-04-09"
          onChange={[Function]}
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="fd-input-group--control fd-input-group"
                      >
                        <input
                          aria-label="Delivery Date"
                          className="fd-input fd-input-group__input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyPress={[Function]}
                          placeholder="MM/DD/YYYY"
                          type="text"
                          value=""
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Choose date"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--appointment-2"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Component API/Table No Styles 1`] = `
<table
  aria-describedby="fd-mocked-short-id"
  className="xxx-table"
  onBlur={[Function]}
  role="grid"
>
  <caption
    aria-live="polite"
    className="xxx-table__caption"
    id="fd-mocked-short-id"
  >
    
  </caption>
  <thead
    className="xxx-table__header"
  >
    <tr
      className="xxx-table__row"
    >
      <th
        className="xxx-table__cell"
      >
        Column Header 1
      </th>
      <th
        className="xxx-table__cell"
      >
        Column Header 2
      </th>
      <th
        className="xxx-table__cell"
      >
        Column Header 3
      </th>
      <th
        className="xxx-table__cell"
      >
        Column Header 4
      </th>
    </tr>
  </thead>
  <tbody
    className="xxx-table__body"
  >
    <tr
      className="xxx-table__row"
      onClick={[Function]}
    >
      <td
        className="xxx-table__cell"
      >
        Data 1
      </td>
      <td
        className="xxx-table__cell"
      >
        Data 2
      </td>
      <td
        className="xxx-table__cell"
      >
        Data 3
      </td>
      <td
        className="xxx-table__cell"
      >
        Data 4
      </td>
    </tr>
    <tr
      className="xxx-table__row"
      onClick={[Function]}
    >
      <td
        className="xxx-table__cell"
      >
        Data 5
      </td>
      <td
        className="xxx-table__cell"
      >
        Data 6
      </td>
      <td
        className="xxx-table__cell"
      >
        Data 7
      </td>
      <td
        className="xxx-table__cell"
      >
        Data 8
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Component API/Table Primary 1`] = `
<table
  aria-describedby="fd-mocked-short-id"
  className="fd-table"
  onBlur={[Function]}
  role="grid"
>
  <caption
    aria-live="polite"
    className="fd-table__caption"
    id="fd-mocked-short-id"
  >
    
  </caption>
  <thead
    className="fd-table__header"
  >
    <tr
      className="fd-table__row"
    >
      <th
        className="fd-table__cell"
      >
        Column Header 1
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 2
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 3
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 4
      </th>
    </tr>
  </thead>
  <tbody
    className="fd-table__body"
  >
    <tr
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell"
      >
        Data 1
      </td>
      <td
        className="fd-table__cell"
      >
        Data 2
      </td>
      <td
        className="fd-table__cell"
      >
        Data 3
      </td>
      <td
        className="fd-table__cell"
      >
        Data 4
      </td>
    </tr>
    <tr
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell"
      >
        Data 5
      </td>
      <td
        className="fd-table__cell"
      >
        Data 6
      </td>
      <td
        className="fd-table__cell"
      >
        Data 7
      </td>
      <td
        className="fd-table__cell"
      >
        Data 8
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Component API/Table Rich Table 1`] = `
<table
  aria-describedby="fd-mocked-short-id"
  className="fd-table"
  onBlur={[Function]}
  role="grid"
>
  <caption
    aria-live="polite"
    className="fd-table__caption"
    id="fd-mocked-short-id"
  >
    
  </caption>
  <thead
    className="fd-table__header"
  >
    <tr
      className="fd-table__row"
    >
      <th
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select all rows"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </th>
      <th
        className="fd-table__cell"
      >
        Avatar
      </th>
      <th
        className="fd-table__cell"
      >
        email
      </th>
      <th
        className="fd-table__cell"
      >
        First Name
      </th>
      <th
        className="fd-table__cell"
      >
        Last Name
      </th>
      <th
        className="fd-table__cell"
      >
        Date
      </th>
      <th
        className="fd-table__cell"
      >
         
      </th>
    </tr>
  </thead>
  <tbody
    className="fd-table__body"
  >
    <tr
      aria-selected={false}
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="User"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell"
      >
        <span
          className="fd-avatar fd-avatar--m fd-avatar--thumbnail fd-avatar--transparent"
          role="presentation"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/green?size=50x50)",
            }
          }
        />
      </td>
      <td
        className="fd-table__cell"
      >
        <a
          href="#"
        >
          user.name@test.com
        </a>
      </td>
      <td
        className="fd-table__cell"
      >
        First Name
      </td>
      <td
        className="fd-table__cell"
      >
        Last Name
      </td>
      <td
        className="fd-table__cell"
      >
        01/26/17
      </td>
      <td
        className="fd-table__cell"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-mocked-short-id"
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Options"
                className="fd-button fd-button--transparent"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--vertical-grip"
                  role="img"
                />
              </button>
            </div>
          </div>
        </div>
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Florence"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell"
      >
        <span
          className="fd-avatar fd-avatar--m fd-avatar--thumbnail fd-avatar--transparent"
          role="presentation"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/brown?size=50x50)",
            }
          }
        />
      </td>
      <td
        className="fd-table__cell"
      >
        <a
          href="#"
        >
          florence.garcia@qwerty.io
        </a>
      </td>
      <td
        className="fd-table__cell"
      >
        First Name
      </td>
      <td
        className="fd-table__cell"
      >
        Last Name
      </td>
      <td
        className="fd-table__cell"
      >
        01/26/17
      </td>
      <td
        className="fd-table__cell"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-mocked-short-id"
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Options"
                className="fd-button fd-button--transparent"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--vertical-grip"
                  role="img"
                />
              </button>
            </div>
          </div>
        </div>
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Mark"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell"
      >
        <span
          className="fd-avatar fd-avatar--m fd-avatar--thumbnail fd-avatar--transparent"
          role="presentation"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/Q27.png?set=set1&size=50x50)",
            }
          }
        />
      </td>
      <td
        className="fd-table__cell"
      >
        <a
          href="#"
        >
          mark.helper@qwerty.io
        </a>
      </td>
      <td
        className="fd-table__cell"
      >
        First Name
      </td>
      <td
        className="fd-table__cell"
      >
        Last Name
      </td>
      <td
        className="fd-table__cell"
      >
        01/26/17
      </td>
      <td
        className="fd-table__cell"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-mocked-short-id"
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Options"
                className="fd-button fd-button--transparent"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--vertical-grip"
                  role="img"
                />
              </button>
            </div>
          </div>
        </div>
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Jenna"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell"
      >
        <span
          className="fd-avatar fd-avatar--m fd-avatar--thumbnail fd-avatar--transparent"
          role="presentation"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/water?&size=50x50)",
            }
          }
        />
      </td>
      <td
        className="fd-table__cell"
      >
        <a
          href="#"
        >
          jenna@qwerty.io
        </a>
      </td>
      <td
        className="fd-table__cell"
      >
        First Name
      </td>
      <td
        className="fd-table__cell"
      >
        Last Name
      </td>
      <td
        className="fd-table__cell"
      >
        01/26/17
      </td>
      <td
        className="fd-table__cell"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-mocked-short-id"
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Options"
                className="fd-button fd-button--transparent"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--vertical-grip"
                  role="img"
                />
              </button>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Component API/Table With Row Navigation 1`] = `
<table
  aria-describedby="fd-mocked-short-id"
  className="fd-table fd-table--no-horizontal-borders"
  onBlur={[Function]}
  role="grid"
>
  <caption
    aria-live="polite"
    className="fd-table__caption"
    id="fd-mocked-short-id"
  >
    
  </caption>
  <thead
    className="fd-table__header"
  >
    <tr
      className="fd-table__row fd-table__row--focusable"
    >
      <th
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select all rows"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </th>
      <th
        className="fd-table__cell"
      >
        Product Name
      </th>
      <th
        className="fd-table__cell"
      >
        Product ID
      </th>
      <th
        className="fd-table__cell"
      >
        Quantity
      </th>
      <th
        className="fd-table__cell"
      >
        Status
      </th>
      <th
        className="fd-table__cell"
      >
        Image
      </th>
      <th
        className="fd-table__cell"
      />
    </tr>
  </thead>
  <tbody
    className="fd-table__body"
  >
    <tr
      aria-selected={false}
      className="fd-table__row fd-table__row--activable fd-table__row--focusable"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Notebook Basic 15"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell"
      >
        <span>
          Notebook Basic 15
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <input
          aria-label="Product ID"
          className="fd-input"
          defaultValue="HT-1000"
          name="Notebook Basic 15"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell"
      >
        <span>
          10
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <span
          className="fd-object-status fd-object-status--positive"
        >
          <span
            className="fd-object-status__text"
          >
            Available
          </span>
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <a
          aria-label="Show image: Notebook Basic 15"
          className="fd-link"
          href="https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/images/HT-1000.jpg"
        >
          Show image
        </a>
      </td>
      <td
        className="fd-table__cell fd-table__cell--fit-content fd-table__cell----no-padding"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-right-arrow fd-table__icon fd-table__icon--navigation"
          role="img"
        />
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row fd-table__row--activable fd-table__row--focusable"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Notebook Basic 17"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell"
      >
        <span>
          Notebook Basic 17
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <input
          aria-label="Product ID"
          className="fd-input"
          defaultValue="HT-1001"
          name="Notebook Basic 17"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell"
      >
        <span>
          0
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <span
          className="fd-object-status fd-object-status--negative"
        >
          <span
            className="fd-object-status__text"
          >
            Unavailable
          </span>
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <a
          aria-label="Show image: Notebook Basic 17"
          className="fd-link"
          href="https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/images/HT-1001.jpg"
        >
          Show image
        </a>
      </td>
      <td
        className="fd-table__cell fd-table__cell--fit-content fd-table__cell----no-padding"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-right-arrow fd-table__icon fd-table__icon--navigation"
          role="img"
        />
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row fd-table__row--activable fd-table__row--focusable"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Notebook Basic 18"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell"
      >
        <span>
          Notebook Basic 18
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <input
          aria-label="Product ID"
          className="fd-input"
          defaultValue="HT-1002"
          name="Notebook Basic 18"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell"
      >
        <span>
          13
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <span
          className="fd-object-status fd-object-status--positive"
        >
          <span
            className="fd-object-status__text"
          >
            Available
          </span>
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <a
          aria-label="Show image: Notebook Basic 18"
          className="fd-link"
          href="https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/images/HT-1002.jpg"
        >
          Show image
        </a>
      </td>
      <td
        className="fd-table__cell fd-table__cell--fit-content fd-table__cell----no-padding"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-right-arrow fd-table__icon fd-table__icon--navigation"
          role="img"
        />
      </td>
    </tr>
    <tr
      aria-selected={false}
      className="fd-table__row fd-table__row--activable fd-table__row--focusable"
      onClick={[Function]}
    >
      <td
        className="fd-table__cell fd-table__cell--checkbox"
      >
        <div
          className="fd-form-item"
        >
          <input
            aria-checked={false}
            aria-label="Select row"
            checked={false}
            className="fd-checkbox"
            id="fd-mocked-short-id"
            name="Notebook Basic 19"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </td>
      <td
        className="fd-table__cell"
      >
        <span>
          Notebook Basic 19
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <input
          aria-label="Product ID"
          className="fd-input"
          defaultValue="HT-1003"
          name="Notebook Basic 19"
          type="text"
        />
      </td>
      <td
        className="fd-table__cell"
      >
        <span>
          15
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <span
          className="fd-object-status fd-object-status--positive"
        >
          <span
            className="fd-object-status__text"
          >
            Available
          </span>
        </span>
      </td>
      <td
        className="fd-table__cell"
      >
        <a
          aria-label="Show image: Notebook Basic 19"
          className="fd-link"
          href="https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/images/HT-1003.jpg"
        >
          Show image
        </a>
      </td>
      <td
        className="fd-table__cell fd-table__cell--fit-content fd-table__cell----no-padding"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-right-arrow fd-table__icon fd-table__icon--navigation"
          role="img"
        />
      </td>
    </tr>
  </tbody>
</table>
`;
